responsive img + small story changes
I made the images responsive.
Also made small changes to the story pages. Changing dialong and some of the hidden text to sound better and provide a bit more context

--- a/s1-p2.html
+++ b/s1-p2.html
@@ -28,17 +28,20 @@
       <main class="content-wrapper">
 
         <!-- Start content edits below this line. -->
-        <p class="main-text story-item"> I didn’t ask about <a class="hidden-text" href="#">Mica</a> until my cousins
-          started living with my uncle. At the dinner table I asked “Why aren’t my cousins living with their mom?” </p>
+        <p class="main-text story-item"> One day my parents left the house in a hurry. When I asked what was going on my said it was a family emergency and they had to help my cousins move in with my uncle. </p>
+        <a class="hidden-text" href="#">Something is wrong. Why isn't anyone telling me anything? I am not a little kid I can understand!  </a>
+        <p class="main-text story-item"> They left before I could ask any more questions. I wasn’t able to bring up the topic until dinner. 
+          <br> “Why aren’t my cousins living with their mom?” <a class="hidden-text" href="#"> Aren't they a family? Don't they love each other?  </a></p>
         <div class="overlay-container">
           <img class="story-item" src="images/dinner-q.PNG"
             alt="a drawing of me asking my mom the question, everyone is happy ">
           <div class="overlay-image">
             <img class="story-item" src="images/dinner-r.PNG" alt="now everyone is sad">
           </div>
+          </div>
           <p class="main-text story-item"> The table became silent </p>
-          <a class="hidden-text" href="#">“Mica is having a hard time right now and needs a break to get back on her
-            feet.” Mom finally said.</a>
+          <p class="main-text story-item"> “<a class="hidden-text" href="#">Mica</a> is having a hard time right now and needs a break to get back on her
+            feet.” Mom finally said. <br><a class="hidden-text" href="#">She didn't tell me that no one, including her kids, has seen her in days.<br> She disappeared. </a> </p>
           <p class="main-text story-item"> Dad changed the topic and I didn’t bring up up again </p>
       </main>
       <a class="btn previous" href="s1-p1.html"> previous</a>
