--- a/s1-p3.html
+++ b/s1-p3.html
@@ -30,8 +30,8 @@
         <!-- Start content edits below this line. -->
         <p class="main-text story-item"> The first time I met <a class="hidden-text" href="#">Mica</a> was at my
           cousin’s birthday party. She gave me a big hug and said she hasn’t seen me since I was a baby. <br><a
-            class="hidden-text" href="#"> she also mentioned how she has never seen my brother </a> </p>
-        <p class="main-text story-item"> She was very happy <br><a class="hidden-text" href="#">but Mom seemed
+            class="hidden-text" href="#"> She also mentioned how she has never seen my brother, who was 5.</a> </p>
+        <p class="main-text story-item"> She was very happy <br><a class="hidden-text" href="#">but Mom looked shocked and then looked
             uncomfortable.</a></p>
         <div class="overlay-container">
           <img class="story-item" src="images/first-met.PNG" alt="drawing of when I first met my aunt">
@@ -40,11 +40,9 @@
               alt="drawing of my parents talking with my aunt as me and my brother leave">
           </div>
         </div>
-        <p class="main-text story-item"> Mom told me take my brother to go play with my cousins while she and her
-          sister
-          talked. </p>
+        <p class="main-text story-item"> Mom told me take my brother to go play with my cousins while she and <a class="hidden-text" href="#">her sister</a> talked. <br> <a class="hidden-text" href="#">I didn’t notice how Dad protectively grabbed Mom’s shoulders</a></p>
         <p class="main-text story-item"> I didn’t get to play with my cousins for that long before Dad told us to head
-          to the car. When we entered I could see that my Mom was crying and I didn’t understand why. </p>
+          to the car. When we entered I could see that my Mom was crying and I didn’t understand why. <a class="hidden-text" href="#">Did she get into a fight with Auntie Mica? Why are we leaving early? They didn't even cut the cake! </a></p>
         <a class="hidden-text" href="#">We didn’t go to a lot of family gatherings afterwards.</a>
       </main>
       <a class="btn previous" href="s1-p2.html"> previous </a>
