--- a/s1-p4.html
+++ b/s1-p4.html
@@ -28,10 +28,9 @@
       <main class="content-wrapper">
 
         <!-- Start content edits below this line. -->
-        <p class="main-text story-item"> I was at a family member’s baby shower - first family gathering in a while. Me
-          and my brother were coloring some baby jokes along with some other kids in the garage away from the main party
+        <p class="main-text story-item"> I was at a family member’s baby shower - first family gathering in a while. Me and the other younger kids were in the garage away from the main party. We had some markers and drawing on a paper table cloth. 
         </p>
-        <p class="main-text story-item"> That was until <a class="hidden-text" href="#">Mica</a> came in.</p>
+        <p class="main-text story-item"> I was talking to my brother until <a class="hidden-text" href="#">Aunt Mica</a> came in.</p>
         <div class="overlay-container">
         <img class="story-item" src="images/bbs.PNG" alt="drawing of me and other kids hanging out around a table">
         <div class="overlay-image">
@@ -39,24 +38,20 @@
             alt="same drawing but my aunt is now in frame">
         </div>
     </div>
-    <p class="main-text story-item"> She came into the garage and sat down in a chair across from me. <br><a
-        class="hidden-text" href="#">She was stumbling</a> </p>
-    <p class="main-text story-item"> She asked me how I was and what I was doing. <br><a class="hidden-text"
-        href="#">Her eyes were dilated </a> </p>
-    <p class="main-text story-item"> I told her I was good and was drawing.<br><a class="hidden-text" href="#">I
-        don’t know why but I could feel the hair on the back of my neck raise </a> </p>
-    <p class="main-text story-item"> She asked what I was drawing. <br><a class="hidden-text" href="#">She didn’t
-        seem all there </a> </p>
-    <p class="main-text story-item"> I answer “Inky, a ghost from Pac-Man.”<br><a class="hidden-text" href="#">I
-        told my brother to go to Dad
-      </a> </p>
-    <p class="main-text story-item"> That set her off. She started ranting about spirituality, death, and the
-      afterlife. <br><a class="hidden-text" href="#">I can’t remember all that was said just that I was scared </a>
+    <p class="main-text story-item"> She came into the garage and sat down in a chair across from me. <a
+        class="hidden-text" href="#">She was stumbling</a> She stared at us for a while <a class="hidden-text"
+        href="#">Her eyes looked werid. Was she even looking at me? </a> before asking what I was doing.</p>
+    <p class="main-text story-item"> I told her I was good and was drawing.<a class="hidden-text" href="#">I
+        don’t know why but I could feel the hair on the back of my neck raise. </a> </p>
+    <p class="main-text story-item"><a class="hidden-text" href="#">Her voice was weird. She didn’t seem all there. </a>  She asked what I was drawing.</p>
+    <p class="main-text story-item"> I answer “Inky, a ghost from Pac-Man.”<a class="hidden-text" href="#">I
+        leaned down to tell my brother to get the other kids out of the room and go to Dad. I didn't know why at the time but things felt off. </a> </p>
+    <p class="main-text story-item"> That set her off. <br> She started ranting about spirituality, death, and the
+      afterlife. <br><a class="hidden-text" href="#">I can’t remember all that was said just that I was scared. </a>
     </p>
-    <p class="main-text story-item">She said that when I die I would become nothing. <br><a class="hidden-text"
-        href="#">I barely knew what death was </a> </p>
-    <p class="main-text story-item"> She was getting louder and louder <br><a class="hidden-text" href="#">And
-        closer and closer </a> </p>
+    <p class="main-text story-item">"Ghost don't exist. When you die you become nothing but dust." <br><a class="hidden-text"
+        href="#">I barely knew what death was and didn't even think about how I would die at some point  </a> </p>
+    <p class="main-text story-item"> She was getting louder and louder. <br> Closer and closer. <br><a class="hidden-text" href="#">She was yelling in my face as I cried <br> I couldn't move. She grabbed my arm. </a> </p>
     </main>
     <a class="btn previous" href="s1-p3.html"> previous </a>
     <a class="btn next" href="s1-p5.html"> next </a>
