changed home to index
my big dumb brain forgot that home.html needs to be index.html. had to change the name and the code

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
         </div>
-        <a class="btn previous" href="home.html"> home </a>
+        <a class="btn previous" href="index.html"> home </a>
     </main>
 </body>
 
