format and present log
I just re-formated everything

I also added another log that adds a bit more information about my current feelings and hints to what was going on.
also added a little goof with a banana
:P

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="outside-bg">
     <header class="content-wrapper content-bg">
-        <h1 class="title"> Wellcome to My house! </h1>
+        <h1 class="title"> Welcome to My house! </h1>
     </header>
     <main class="content-wrapper ">
         <div class="content-bg overlay-container">
