--- a/s1-p1.html
+++ b/s1-p1.html
@@ -41,8 +41,11 @@
         </div>
         <p class="main-text story-item"> I met almost all of them - but I have never heard of <a class="hidden-text"
             href="#">Mica</a>. When I asked who <a class="hidden-text" href="#">Mica</a> was Mom got quiet. </p>
-        <a class="hidden-text" href="#">She told me that Mica was the oldest, mother of my three cousins, and she hasn't been seen in a long time. She didn’t want to elaborate after that. </a>
-        <p class="main-text story-item"> I was confused. <a class="hidden-text" href="#">How could you not see or talk your sibling in years? I hang out with my brother every day </a> <br> Mom seemed sad. We both didn't bring it up. </p>
+        <a class="hidden-text" href="#">She told me that Mica was the oldest, mother of my three cousins, and she hasn't
+          been seen in a long time. She didn’t want to elaborate after that. </a>
+        <p class="main-text story-item"> I was confused. <a class="hidden-text" href="#">How could you not see or talk
+            your sibling in years? I hang out with my brother every day </a> <br> Mom seemed sad. We both didn't bring
+          it up. </p>
         <p class="main-text story-item"> I got an A on my assignment! </p>
       </main>
       <a class="btn previous" href="bookshelf.html"> back to the bookshelf </a>
