--- a/s1-p5.html
+++ b/s1-p5.html
@@ -28,26 +28,25 @@
       <main class="content-wrapper">
 
         <!-- Start content edits below this line. -->
-        <p class="main-text story-item"> Dad few into the room. He didn’t say anything and took me and brother into the car before going to get
+        <p class="main-text story-item"> Dad few into the room. He didn’t say anything and took me and brother into the
+          car before going to get
           Mom. When Mom came she was fuming. </p>
         <!-- <div class="overlay-container"> -->
-          <img class="story-item" src="images/car.PNG" alt="drawing of my family in the car">
-          <!-- <div class="overlay-image">
-            <img class="story-item" src="images/first-chat.PNG"
-              alt="drawing of my parents talking with my aunt as me and my brother leave">
-          </div>
-        </div> -->
+        <img class="story-item" src="images/car.PNG" alt="drawing of my family in the car">
         <p class="main-text story-item">“I knew we shouldn’t have come.” “I thought she would know better.”<br><a
             class="hidden-text" href="#">“She promised me she was better!” </a></p>
-        <p class="main-text story-item"> I didn’t <a class="hidden-text" href="#">Mica</a> for years after that. <br><a class="hidden-text" href="#"> Now I understood why my cousins didn't want to live with their mom anymore.  <br> She could be scary. </a></p>
+        <p class="main-text story-item"> I didn’t <a class="hidden-text" href="#">Mica</a> for years after that. <br><a
+            class="hidden-text" href="#"> Now I understood why my cousins didn't want to live with their mom anymore.
+            <br> She could be scary. </a></p>
       </main>
       <p class="main-text story-item"> The End! </p>
       <a class="btn previous" href="s1-p4.html"> previous </a>
       <a class="btn next" href="bookshelf.html"> back to the bookshelf</a>
-
-
     </div>
+    <a class="hidden-text" href="images/bananas-480.jpeg">?b?</a>
   </div>
+  <a class="hidden-text" href="present.html">?p?</a>
+
 </body>
 
 </html>
